<resources>
    <string name="app_name">My Application 1</string>
    <string name="user_name">User Name</string>
    <string name="number_of_attempts">Number Of Attempts:</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="switch_clocks">Switch Clocks</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_action_bar">ActionBarActivity</string>
</resources>
