<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_second"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.myapplication1.SecondActivity">

    <TextClock
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textClock1"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textClock2" />

    <TextClock
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:layout_marginTop="40dp"
        android:id="@+id/textClock2"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/switch_clocks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textClock2"
        android:layout_alignParentStart="false"
        android:layout_marginStart="58dp"
        android:layout_marginTop="30dp"
        android:id="@+id/changeClockButton"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/changeClockButton"
        android:layout_alignParentStart="true"
        android:layout_marginTop="42dp"
        android:id="@+id/textViewUser" />

    <TextView
        android:text="@string/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:id="@+id/textViewPassword"
        android:layout_below="@+id/textViewUser"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextPassowrd"
        android:layout_alignStart="@+id/textClock2"
        android:layout_marginStart="13dp"
        android:id="@+id/textViewAttemptsCount" />

    <Button
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewNumOfAttempts"
        android:layout_marginTop="32dp"
        android:id="@+id/button_login" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:ems="10"
        android:layout_alignBottom="@+id/textViewPassword"
        android:layout_toEndOf="@+id/button_login"
        android:layout_marginBottom="18dp"
        android:id="@+id/editTextUser" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_alignTop="@+id/textViewPassword"
        android:layout_alignStart="@+id/editTextUser"
        android:id="@+id/editTextPassowrd" />

    <TextView
        android:text="@string/number_of_attempts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewNumOfAttempts"
        android:layout_below="@+id/editTextPassowrd"
        android:layout_toStartOf="@+id/textClock2" />

</RelativeLayout>
